--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.devskiller.boot</groupId>
-	<artifactId>jpa-blog</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>com.products</groupId>
+	<artifactId>products</artifactId>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
-	<name>jpa-blog</name>
+	<name>products</name>
 	<description></description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.5.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
 
 	<properties>
