--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # OpenKM Hibernate configuration values
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/okmdb
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.username=user
+spring.datasource.password=password
 
 # JPA stuff
 spring.jpa.hibernate.ddl-auto=update
